--- a/style.css
+++ b/style.css
@@ -127,3 +127,135 @@
     font-weight: bold;
 }
 
+
+.panel{
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.752);
+    display: flex; 
+    color: white;
+    align-items: center;  
+    justify-content: space-evenly;
+}
+.panel-ops p{
+    display: inline;
+    margin-left: 15px;
+}
+.panel-ops{
+    width: 70%;
+    font-size: 0.9rem;
+   
+}
+.panel-deals{
+    font-weight: bold;
+}
+
+
+
+/* Hero Section  */
+.Hero-section{
+    background-image: url(hero_image.jpg);
+    background-size: cover;
+    height: 320px;
+    align-items: flex-end;
+    display: flex;
+    justify-content: center;
+}
+.Hero-msg{
+    background-color: white;
+    justify-content: center;
+    display: flex;
+    width: 80%;
+    align-items: center;
+    margin-bottom: 25px;
+}
+.Hero-msg a{
+    color: rgba(0, 0, 255, 0.43)
+}
+
+
+.shop-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: rgba(128, 128, 128, 0.108);
+}
+.box{
+    height: 400px;
+    border: 2px solid black;
+    width: 23%;
+    background-color: white;
+    padding: 20px 0px 15px;
+    margin: 10px;
+}
+.box-img{
+    height: 300px; 
+    margin-top: 1rem; 
+    margin-bottom: 1rem; 
+    background-size: cover;
+}
+.box-content{
+    margin-left: 10px;
+    margin-right: 10px
+}
+.box-content p{
+    color: rgba(0, 0, 255, 0.495);
+}
+
+
+/* footer */
+.footer-panel1{
+    background-color: rgb(41, 41, 110);
+    height: 50px;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.footer-panel2{
+    background-color: rgba(14, 14, 53, 0.914);
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    height: 300px;
+   
+}
+.footer-panel2 a{
+    display: block;
+    font-size: 0.8rem;
+    margin-top: 10px;
+    color: aliceblue;
+}
+ul{
+    margin-top: 20px;
+}
+
+
+.footer-panel3{
+    background-color: rgba(14, 14, 53, 0.914);
+    border: 0.5px solid white;
+    height: 80px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.logo {
+    height: 50px;
+    width: 100%;
+    background-image: url("amazon_logo.png");
+    background-size: cover;
+    width: 100px;
+  
+}
+.footer-panel4{
+    background-color: rgba(14, 14, 53, 0.914);
+    color: white;
+    height: 70px;
+    font-size: 0.7rem;
+    text-align: center;  
+}
+.copyrights{
+    padding-top: 5px;
+}
+.pages{
+    padding-top: 20px;
+}
